2010-01-26  Richard Guenther  <rguenther@suse.de>

PR tree-optimization/42250
	* ipa-type-escape.c (type_escape_execute): Do not analyze clones.

	* gcc.dg/pr42250.c: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@156244 138bc75d-0d04-0410-961f-82ee72b054a4